sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:4: error: ')' expected but '<-' found.
  for(j<- i<- 1 to getValueCount()-1){
           ^AlgInsertionSort:4: error: ';' expected but ')' found.
  for(j<- i<- 1 to getValueCount()-1){
                                    ^